c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/extra_credit/compound_add_two_pointers.c
// += and -= operators: RHS must not be a pointer regardless of LHS type
int main(void) {
    int arr[3] = {1, 2, 3};
    int *elem0 = arr;
    int *elem1 = arr + 1;
    elem0 += elem1;
    return 0;
}